--- a/project_3_map/pubspec.yaml
+++ b/project_3_map/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   geocoding: ^2.0.0
 
   flutter_staggered_grid_view: ^0.3.3
+  quiver: ^3.0.1
 
 dev_dependencies:
   flutter_test:
