--- a/project_3_map/pubspec.yaml
+++ b/project_3_map/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
 
   flutter_staggered_grid_view: ^0.3.3
   quiver: ^3.0.1
+  mockito: ^5.0.11
+  build_runner: ^2.0.6
 
 dev_dependencies:
   flutter_test:
