--- a/project_3_map/pubspec.yaml
+++ b/project_3_map/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   quiver: ^3.0.1
   mockito: ^5.0.11
   build_runner: ^2.0.6
+  flutter_dotenv: ^5.0.0
 
 dev_dependencies:
   flutter_test:
